--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
