--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http": "0.0.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sql": "^0.78.0"
